# faramesh-python-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-pypi.yml
examples/: deepagents_openrouter_qwen_production.py
examples/policies/: deepagents_openrouter_qwen_production.fpl
faramesh/: __init__.py  autopatch.py  client.py  decorators.py  exceptions.py  govern.py  governed_toolset.py  middleware.py  sitecustomize_hook.py  transport.py
faramesh/adapters/: __init__.py  bedrock_agentcore.py  deepagents.py  google_adk.py  langchain.py  llamaindex.py  pydantic_ai.py
tests/: test_adapters.py  test_autopatch.py  test_deepagents_adapter.py  test_deepagents_policy_fpl_harness.py  test_govern.py  test_langchain_adapter.py  test_langchain_live_integration.py  test_langchain_policy_fpl_harness.py  test_middleware.py
